Fixed alignment of selections in the sidebar using a flexbox
Sometimes the select box was not on one line with the label

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,20 @@
     padding-bottom: 0px;
 }
 
+#sidebar_plugin_filamentmanager .controls {
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+}
+
+#sidebar_plugin_filamentmanager .controls > label {
+    margin: 0;
+}
+
+#sidebar_plugin_filamentmanager .controls > select {
+    flex: 1;
+}
+
 #fm_inventory_tab table th:not(.fm_inventory_table_column_action) {
     cursor: pointer;
 }
